<resources>
    <string name="app_name">Pomodo</string>
    <string name="timer_open">타이머 열기</string>
    <string name="leaderBoard_open">기록 열기</string>
    <string name="checkList_open">플래너 열기</string>
    <string name="circle_frame">타이머 틀 모양</string>
    <string name="timer_start_button">타이머 시작 버튼</string>
    <string name="timer_stop_button">타이머 정지 버튼</string>
    <string name="total_focus_time">00:00:00</string>
    <string name="focus_time">00:00</string>
    <string name="break_time">00:00</string>
    <string name="reset_button">"타이머 초기화 버튼"</string>

    <string name="hint_focus_time">집중 시간(분)을 입력해주세요.</string>
    <string name="hint_break_time">휴식 시간(분)을 입력해주세요.</string>
    <string name="hint_repeat_count">반복 횟수를 설정해주세요.</string>
    <string name="set_repeat_count">반복 횟수</string>
    <string name="dialog_focus_time">집중 시간</string>
    <string name="dialog_break_time">휴식 시간</string>
    <string name="prevMonthButton">&lt;</string>
    <string name="nextMonthButton">&gt;</string>
    <string name="month_year_format">%1$d년 %2$d월</string>
    <string name="planner_text">Planner</string>
        <string name="edit_text">편집</string>
        <string name="plus_text">+</string>
        <string name="timer_icon_desc">Timer icon</string>
        <string name="checklist_icon_desc">Checklist icon</string>
        <string name="leaderboard_icon_desc">Leaderboard icon</string>
        <string name="calendar_icon_desc">calendar_icon_desc</string>
    <string name="onboarding_image_description">타이머 화면 이미지</string>
</resources>