<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <!-- 집중 시간 설정을 위한 UI -->
    <TextView
        android:id="@+id/focus_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_focus_time"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/focus_time_input"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/focus_time_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_focus_time"/>

    <!-- 휴식 시간 설정을 위한 UI -->
    <TextView
        android:id="@+id/break_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_break_time"
        app:layout_constraintTop_toBottomOf="@+id/focus_time_input"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/break_time_input"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        app:layout_constraintTop_toBottomOf="@+id/break_time_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:importantForAutofill="no"
        android:hint="@string/hint_break_time"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/repeat_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_repeat_count"
        app:layout_constraintTop_toBottomOf="@id/break_time_input"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/repeat_count_input"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/hint_repeat_count"
        android:inputType="number"
        android:digits="0123456789"
        app:layout_constraintTop_toBottomOf="@+id/repeat_count_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/darker_gray"
        android:importantForAutofill="no"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>
