<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/timer"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/timer"
        android:contentDescription="@string/timer_open"
        />

    <ImageView
        android:id="@+id/leaderBoard"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/leaderboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/leaderBoard_open"
        />

    <ImageView
        android:id="@+id/checkList"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/checkList_open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/leaderBoard"
        app:layout_constraintStart_toEndOf="@+id/timer"
        app:srcCompat="@drawable/checklist"
        />

    <!-- 연도와 월을 표시할 TextView -->
    <TextView
        android:id="@+id/monthYearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month_year_format"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <!-- 이전 달 버튼 -->
    <Button
        android:id="@+id/prevMonthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevMonthButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monthYearTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp" />

    <!-- 다음 달 버튼 -->
    <Button
        android:id="@+id/nextMonthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextMonthButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monthYearTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp" />

    <!-- 캘린더 CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/calendarCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/prevMonthButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <!-- 캘린더 레이아웃 -->
        <GridLayout
            android:id="@+id/calendarGridLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:columnCount="7">
        </GridLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>